--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react": "^17.0.1",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "tailwindcss": "^2.0.2",
     "tailwindcss-neumorphism": "^0.1.0",
     "web-vitals": "^0.2.4"
