--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@iconify-icons/ant-design": "^1.1.0",
+    "@iconify-icons/carbon": "^1.1.1",
+    "@iconify-icons/clarity": "^1.1.0",
+    "@iconify-icons/eva": "^1.1.0",
     "@iconify-icons/subway": "^1.1.0",
     "@iconify/react": "^1.1.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^10.2.3",
     "firebase": "^8.2.4",
+    "popper.js": "^1.16.1",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
