--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_REGISTER_REDIRECT_URL='http://localhost:3000/signup/complete'
-REACT_APP_FORGOT_PASSWORD_REDIRECT_URL='http://localhost:3000/signin'
+REACT_APP_REGISTER_REDIRECT_URL='https://blood-bank-ten.vercel.app/complete'
+REACT_APP_FORGOT_PASSWORD_REDIRECT_URL='https://blood-bank-ten.vercel.app/signin'
